# flight-prophet

./: .gitignore  .pre-commit-config.yaml  Dockerfile.dev  Dockerfile.prod  Dockerfile.test  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  train.py
.code_quality/: .flake8
.github/workflows/: cd.yml  ci.yml
challenge/: __init__.py  api.py  classifier.py  exploration.ipynb  model.py
docs/: challenge.md
tests/api/: test_api.py
tests/model/: test_model.py
tests/resources/: test_model.pkl
tests/stress/: api_stress.py
workflows/: cd.yml  ci.yml
