[tool.poetry]
name = "fprophet"
version = "0.1.0"
description = "System that predicts the probability of delay of a flight to take off/land in Santiago, Chile"
authors = ["Alenadro Viegener"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.2"

[tool.poetry.dev-dependencies]
mypy = "^1.1.1"
black = "^23.1.0"
flake8 = "5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
