[tool.poetry]
name = "fprophet"
version = "0.1.0"
description = "System that predicts the probability of delay of a flight to take off/land in Santiago, Chile"
authors = ["Alenadro Viegener"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.2"
pandas = "^1.5.3"
seaborn = "^0.12.2"
missingno = "^0.5.2"
scikit-learn = "^1.2.2"
xgboost = "^1.7.4"

[tool.poetry.dev-dependencies]
mypy = "^1.1.1"
black = "^23.1.0"
flake8 = "5.0.4"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
